@@ -103,6 +103,7 @@ Description: Dpkg perl modules
   - Dpkg: core variables
   - Dpkg::BuildFlags: set, modify and query compilation build flags
   - Dpkg::BuildOptions: parse and manipulate DEB_BUILD_OPTIONS
+  - Dpkg::BuildProfile: parse and manipulate build profiles
   - Dpkg::Changelog: parse Debian changelogs
   - Dpkg::Checksums: generate and parse checksums
   - Dpkg::Compression::Process: wrapper around compression tools
