@@ -23,6 +23,7 @@ dpkg (1.17.17) UNRELEASED; urgency=low
     - New Dpkg::Getopt private module.
     - Document public module Dpkg.
     - Document public module Dpkg::Gettext.
+    - Mark Dpkg::BuildProfiles as a public module.
   * Set the DEB_TARGET_* dpkg-architecture variables from architecture.mk.
     Missed in dpkg 1.17.14.
   * Initialize DEB_TARGET_ARCH variable without requiring DEB_HOST_ARCH,
